--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,3 +27,52 @@ InvoiceListTitle=Invoices
 InvoiceStatusA=New
 InvoiceStatusB=In Progress
 InvoiceStatusC=Done
+
+ 
+#XCOL: 
+detailPageTittle=Invoice - Details
+ 
+#XFLD: 
+productRatingLabelIndicator=Your rating: {0} out of {1}
+ 
+#XFLD: 
+ProductRatingLabelInitial=Please rating this product
+ 
+#XBUT: 
+productRatingButton=Rate
+ 
+#XFLD: 
+productRatingLabelFinal=Thank you for your rating!
+ 
+#XMSG: 
+ratingConfirmation=You have rated this a product with {0} stars
+ 
+#XCOL: 
+columnQuantity=Quantity
+ 
+#XCOL: 
+columName=Name
+ 
+#XCOL: 
+columStatus=Status
+ 
+#XCOL: 
+columSupplier=Supplier
+ 
+#XCOL: 
+columPrice=Price
+ 
+#XTXT: 
+quantityTitle=Quantity
+ 
+#XCOL: 
+Overview_rootLabe=Overview Page
+ 
+#XCOL: 
+Overview_contentLabel=Page Content
+ 
+#XCOL: 
+Overview_headerLabel=Header
+ 
+#XCOL: 
+searchFieldPlaceHolder=Search
